--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "angulartics2",
   "description": "Vendor-agnostic web analytics for Angular2 applications",
+  "version": "1.0.0",
   "homepage": "http://angulartics.github.io/",
   "author": "João Ribeiro <jonnybgod@gmail.com> (http://github.com/JonnyBGod)",
   "contributors": [
@@ -37,17 +38,17 @@
     "Tyler Danielson <tysdanielson@gmail.com> (https://github.com/tydanielson)"
   ],
   "devDependencies": {
-    "@angular/common": "^4.2.4",
-    "@angular/compiler": "^4.2.4",
-    "@angular/compiler-cli": "^4.2.4",
-    "@angular/core": "^4.2.4",
-    "@angular/platform-browser": "^4.2.4",
-    "@angular/platform-browser-dynamic": "^4.2.4",
-    "@angular/router": "^4.2.4",
+    "@angular/common": "^2.0.0",
+    "@angular/compiler": "^2.0.0",
+    "@angular/compiler-cli": "^2.0.0",
+    "@angular/core": "^2.0.0",
+    "@angular/platform-browser": "^2.0.0",
+    "@angular/platform-browser-dynamic": "^2.0.0",
+    "@angular/router": "^3.0.0",
     "@types/applicationinsights-js": "^1.0.4",
-    "@types/core-js": "^0.9.42",
-    "@types/jasmine": "^2.5.53",
-    "@types/node": "^8.0.4",
+    "@types/core-js": "^0.9.34",
+    "@types/jasmine": "^2.5.37",
+    "@types/node": "^6.0.46",
     "awesome-typescript-loader": "^3.1.3",
     "clean-webpack-plugin": "^0.1.16",
     "codelyzer": "^3.1.1",
@@ -66,7 +67,7 @@
     "karma-webpack": "^2.0.2",
     "reflect-metadata": "^0.1.10",
     "rimraf": "^2.6.1",
-    "rxjs": "^5.4.1",
+    "rxjs": "^5.0.0-beta.12",
     "semantic-release": "^6.3.6",
     "source-map-loader": "^0.2.1",
     "systemjs": "^0.20.14",
@@ -75,7 +76,7 @@
     "tslint-loader": "^3.5.3",
     "typescript": "^2.4.1",
     "webpack": "^3.0.0",
-    "zone.js": "^0.8.12"
+    "zone.js": "^0.6.17"
   },
   "bugs": {
     "url": "http://github.com/angulartics/angulartics2/issues"
